--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,15 +27,17 @@ dist.jar=${dist.dir}/vig.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.308checks.jar=C:\\Users\\Susie\\Documents\\NetBeansProjects\\SleuthGame\\lib\\308checks.jar
-file.reference.checkstyle-all-4.4.jar=C:\\Users\\Susie\\Documents\\NetBeansProjects\\SleuthGame\\lib\\checkstyle-all-4.4.jar
-file.reference.junit-4.10.jar=C:\\Users\\Susie\\Documents\\NetBeansProjects\\SleuthGame\\lib\\junit-4.10.jar
-file.reference.mockito-1.10.19.jar=C:\\Users\\Susie\\Documents\\NetBeansProjects\\SleuthGame\\lib\\mockito-1.10.19.jar
-file.reference.uispec4j-jdk17.jar=C:\\Users\\Susie\\Documents\\NetBeansProjects\\SleuthGame\\lib\\uispec4j-jdk17.jar
+file.reference.308checks.jar=lib/308checks.jar
+file.reference.checkstyle-all-4.4.jar=lib/checkstyle-all-4.4.jar
+file.reference.junit-4.10.jar=lib/junit-4.10.jar
+file.reference.mockito-1.10.19.jar=lib/mockito-1.10.19.jar
+file.reference.OCSF.jar=lib/OCSF.jar
+file.reference.uispec4j-jdk17.jar=lib/uispec4j-jdk17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.308checks.jar}:\
+    ${file.reference.OCSF.jar}:\
     ${file.reference.checkstyle-all-4.4.jar}:\
     ${file.reference.junit-4.10.jar}:\
     ${file.reference.mockito-1.10.19.jar}:\
